@@ -1,6 +1,7 @@
 Revision history for Perl application Wx::Demo.
 
 0.06
+	- Added demo for wxToolBar (moved the code from the wxPerl one).
 
 0.05  Sun Nov 26 18:23:54 CET 2006
 	- Added wxAuiNotebook to the AUI demo.
